--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for PDF-Native
 
 {{$NEXT}}
+  - Fix accidental 32bit (4Gb) PDF file-size limit
   - Adjust cos_inline_image_write() indentation to match Raku implementation.
     -- indent the inline image dictionary
     -- don't indent final 'EI' (end-image)
